NPC sheet almost finished

--- a/scss/_emu-overrides.scss
+++ b/scss/_emu-overrides.scss
@@ -10,7 +10,19 @@
 	body.vtt.game.system-eunos-blades.-emu {
 
 		#euno-clock-keeper-overlay {
+
+
+
 			@import './emu-overrides/euno-clocks-overlay';
+
+			& {}
+
+
+
+
+
+
+
 		}
 
 		#controls,
