--- a/scss/emu-overrides/_sheets.scss
+++ b/scss/emu-overrides/_sheets.scss
@@ -50,28 +50,28 @@ th.black-white label {
 
 
 
-	
+
 
 table.items-list {
-    &.effects-list {   
+    &.effects-list {
         thead, tbody {
             th {
                 margin: 0 !important;
             }
             th:nth-of-type(1), td:nth-of-type(1) {
-                width: 40%;                
+                width: 40%;
             }
             th:nth-of-type(2), td:nth-of-type(2) {
-                width: 30%;  
+                width: 30%;
                 text-align: center;
             }
             th:nth-of-type(3), td:nth-of-type(3) {
-                width: 15%;  
-                text-align: center;      
+                width: 15%;
+                text-align: center;
             }
             th:nth-of-type(4), td:nth-of-type(4) {
-                width: 15%;  
-                text-align: right;      
+                width: 15%;
+                text-align: right;
             }
             td {
                 // height: 24px;
@@ -103,18 +103,39 @@ table.items-list {
             select {
                 color: var(--blades-white);
             }
-            
-            .notes {
-                flex: initial;
-                font-size: inherit;
-                line-height: inherit;
-                margin: 0;
 
-                .label-stripe {
-                    margin-bottom: 0;
-                }
-	       }
+						.nav-panel {
+							nav {
+								background-color: var(--blades-white);
+								padding: 0 10px;
+
+								.item {
+									color: var(--blades-black);
+									padding: 0 10px;
+
+									&.active {
+										background-color: var(--blades-white-bright);
+									}
+
+									&:hover {
+										color: var(--blades-black-dark);
+										background-color: var(--blades-white-bright);
+									}
+
+								}
+							}
+						}
+
+        //     .notes {
+        //         flex: initial;
+        //         font-size: inherit;
+        //         line-height: inherit;
+        //         margin: 0;
+
+        //         .label-stripe {
+        //             margin-bottom: 0;
+        //         }
+	      //  }
         }
     }
 }
-
